Automate config file copying and directory creation in CMake
- Enhanced CMakeLists.txt with automatic logs directory creation
- Added custom target 'copy_configs' to handle all config file copying
- Implemented robust config file automation that copies any files from config/ directory
- Files are automatically copied on every build using copy_if_different for efficiency
- Ensures clean builds always have required config files and directories
- Resolves roadmap item: Config file copying not automated in CMake

✅ Tested: Complete clean build works with automatic file copying
✅ Verified: Application runs correctly with automated config files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,5 +38,24 @@ set_target_properties(ETLPlusBackend PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
 )
 
+# Create necessary directories
+file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/bin/logs)
+
 # Copy config file to build directory
 configure_file(${CMAKE_SOURCE_DIR}/config/config.json ${CMAKE_BINARY_DIR}/bin/config.json COPYONLY)
+
+# Create a custom target to copy all config files
+add_custom_target(copy_configs ALL
+    COMMENT "Copying configuration files to build directory"
+)
+
+# Add commands to copy any additional config files if they exist
+file(GLOB CONFIG_FILES "${CMAKE_SOURCE_DIR}/config/*")
+foreach(CONFIG_FILE ${CONFIG_FILES})
+    get_filename_component(CONFIG_FILENAME ${CONFIG_FILE} NAME)
+    add_custom_command(TARGET copy_configs PRE_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        ${CONFIG_FILE} ${CMAKE_BINARY_DIR}/bin/${CONFIG_FILENAME}
+        COMMENT "Copying ${CONFIG_FILENAME}"
+    )
+endforeach()
