Add Oracle Free Docker setup for ETL Plus database
- Docker Compose configuration with Oracle Free 23.5.0.0 container
- Oracle initialization scripts with ETL Plus schema setup
- Updated configuration to use Oracle instead of PostgreSQL
- Database setup documentation and health check scripts
- Test script for verifying Oracle Docker setup
- Updated roadmap to mark database setup as completed

Features:
- Complete ETL Plus database schema (etl_jobs, etl_job_logs, users tables)
- Automated Oracle user and tablespace creation
- Health checks and connection verification
- Comprehensive setup documentation

--- a/config/config.json
+++ b/config/config.json
@@ -6,10 +6,12 @@
   },
   "database": {
     "host": "localhost",
-    "port": 5432,
-    "name": "etlplus",
-    "username": "postgres",
-    "password": ""
+    "port": 1521,
+    "name": "FREE",
+    "service_name": "FREE",
+    "username": "etlplus",
+    "password": "etlplus123",
+    "type": "oracle"
   },
   "auth": {
     "jwt_secret": "your-secret-key-here",
