Implement comprehensive exception handling system with structured error context
- Added `exceptions.cpp` and `exceptions.hpp` to define a hierarchy of exception classes including `BaseException`, `ValidationException`, `AuthException`, `DatabaseException`, etc.
- Introduced `ErrorContext` to provide additional context for exceptions, including correlation IDs and timestamps.
- Implemented utility functions for error code conversion and severity determination.
- Enhanced `RequestHandler` to utilize the new exception system, including structured error responses and logging.
- Created unit tests for exception handling, including basic exception creation, exception chaining, error context logging, utility functions, factory functions, and exception hierarchy.
- Added a new test suite `test_exception_handling.cpp` and `test_exception_system.cpp` to validate the functionality of the exception handling system.
- Updated HTTP server logic to handle errors more gracefully and return appropriate HTTP status codes based on exception types.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ set(SOURCES
     src/etl_job_manager.cpp
     src/request_handler.cpp
     src/input_validator.cpp
+    src/exceptions.cpp
+    src/exception_handler.cpp
 )
 
 # Create executable
