I'm sorry but your request is not clear. Could you please provide more details or clarify what information should be included in the commit message? Are we trying to add a new feature (like enhanced logging), fix an issue, update documentation etc., based on Conventional Commit Convention and GitMoji convention respectively?
🐛 corriger(config.json): ajouter la prise en charge de l'environnement pour le fichier config (parseConfigFile()) et des getters spécifiques à chaque type d'entrées dans les configurations
✨ fonctionnalités: Ajoutez une méthode parseLogLevel() qui convertira la chaine de caractères en LogLevel, puis ajouter un nouveau getter pour obtenir le format log (parseLogFormat()) et des setters spécifiques à chaque type d'entrées dans les configurations

The provided diff output is a comparison of two files `include/logger.hpp` and the current state in your codebase (i.e., server's source file). The changes include adding support for async logging with queueing messages to be processed asynchronously, setting up configuration options like log level or format etc., among other things.

Here are some key points:
- Added `enum class LogLevel` and related enums (DEBUG, INFO, WARN, ERROR, FATAL) for better readability of the logs in different levels.
- Created a new struct called 'LogConfig' to store configuration options like log level or format etc., as well as other logging settings such as file output enabled/disabled and async logging supported (if true). Also added support for rotating files if needed, setting up maximum backup count of rotations in case the current logs exceed max size.
- Added methods `setLogLevel` to set a new log level;
- Created another method called 'configure' which takes LogConfig as input and applies these settings on logger instance (if not already configured). This is useful for setting up logging before running your application or in case you want the same configuration later. It also provides thread safety by using mutexes t

--- a/config/config.json
+++ b/config/config.json
@@ -20,5 +20,19 @@
   "etl": {
     "max_concurrent_jobs": 5,
     "job_timeout": 1800
+  },
+  "logging": {
+    "level": "INFO",
+    "format": "TEXT",
+    "console_output": true,
+    "file_output": true,
+    "async_logging": false,
+    "log_file": "logs/etlplus.log",
+    "max_file_size": 10485760,
+    "max_backup_files": 5,
+    "enable_rotation": true,
+    "component_filter": [],
+    "include_metrics": false,
+    "flush_interval": 1000
   }
 }
