The provided diff output is a comparison between two versioned files (`src/server.ts` in `a/.kiro/specs/real-time-job-monitoring/design.md` and correspondingly, the same location on disk as your current working directory). The changes include various sections related to real time job monitoring system design including:
1. **Overview** - This section provides a brief overview of what is being implemented in this part of the document (Real-time Job Status Monitoring – Design Document) and its purpose, functionality etc.. It also mentions that it integrates with existing ETLJobManager component for enhanced monitoring capabilities while adding new WebSocket features.

2. **Architecture** - This section outlines a high level architecture of the system which includes details about how different components interact (WebSocket Manager – Handles individual connections and message routing, Job Monitor Service – Centralizes job status tracking & event distribution etc.). It also mentions that it integrates with existing ETLJobManager component for enhanced monitoring capabilities.

3. **Component Integration** - This section explains how different components interact in the system (WebSocket Connection Handler handles individual connections and message routing, Job Monitor Service coordinates job status tracking & event distribution etc.). It also mentions that it integrates with existing ETLJobManager component for enhanced monitoring capabilities while adding new WebSocket features.

4. **Data Models** - This section defines the data models used in this system (WebSocket Message Format and Configuration Extensions).

5. **Error Handling**- It explains how different components handle errors during their operations, including connection failures handling with exponential backoff pattern for WebSockets etc., along with other error scenarios like monitoring service failure scenario where basic job status is still available in case of failed requests and configuration issues (re

--- a/config/config.json
+++ b/config/config.json
@@ -34,5 +34,13 @@
     "component_filter": [],
     "include_metrics": false,
     "flush_interval": 1000
+  },
+  "monitoring": {
+    "websocket": {
+      "enabled": true,
+      "max_connections": 100,
+      "heartbeat_interval": 30,
+      "message_queue_size": 1000
+    }
   }
 }
