Completed Sub-tasks: ✅ Create WebSocketManager class with connection pool management
Enhanced existing WebSocketManager with thread-safe connection pool
Added connection lifecycle management and automatic cleanup
✅ Implement message broadcasting to all connected clients

Enhanced broadcastMessage() for basic broadcasting
Added broadcastJobUpdate() for job-specific updates
Added broadcastLogMessage() for filtered log streaming
Added broadcastByMessageType() for type-specific broadcasting
✅ Add connection filtering and selective message delivery

Implemented ConnectionFilters struct with job ID, message type, and log level filtering
Added shouldReceiveMessage() method for intelligent message filtering
Created broadcastToFilteredConnections() for custom filter predicates
✅ Create unit tests for connection management and message broadcasting

Created comprehensive test suite (test_websocket_manager_enhanced.cpp)
Added filtering demonstration (test_websocket_filtering_demo.cpp)
All existing tests continue to pass (backward compatibility maintained)
🎯 Requirements Met:
Requirement 1.1: Job status broadcasting infrastructure ✅
Requirement 1.2: Log streaming with filtering capabilities ✅
Requirement 1.4: Connection management for client lifecycle ✅
🧪 All Tests Passing:
Basic WebSocket tests ✅
Integration tests ✅
Enhanced manager tests ✅
Filtering demonstration ✅

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,7 @@ foreach(CONFIG_FILE ${CONFIG_FILES})
 endforeach()
 
 # WebSocket Basic Test Executable
-add_executable(test_websocket_basic test_websocket_basic.cpp 
+add_executable(test_websocket_basic scripts/test_websocket_basic.cpp 
     src/websocket_connection.cpp
     src/websocket_manager.cpp
     src/logger.cpp 
@@ -80,7 +80,7 @@ target_include_directories(test_websocket_basic PRIVATE include)
 target_link_libraries(test_websocket_basic ${Boost_LIBRARIES} pthread)
 
 # WebSocket Integration Test Executable
-add_executable(test_websocket_integration test_websocket_integration.cpp 
+add_executable(test_websocket_integration scripts/test_websocket_integration.cpp 
     src/websocket_connection.cpp
     src/websocket_manager.cpp
     src/logger.cpp 
@@ -89,3 +89,25 @@ add_executable(test_websocket_integration test_websocket_integration.cpp
 
 target_include_directories(test_websocket_integration PRIVATE include)
 target_link_libraries(test_websocket_integration ${Boost_LIBRARIES} pthread)
+
+# Enhanced WebSocket Manager Test Executable
+add_executable(test_websocket_manager_enhanced scripts/test_websocket_manager_enhanced.cpp 
+    src/websocket_connection.cpp
+    src/websocket_manager.cpp
+    src/logger.cpp 
+    src/config_manager.cpp
+)
+
+target_include_directories(test_websocket_manager_enhanced PRIVATE include)
+target_link_libraries(test_websocket_manager_enhanced ${Boost_LIBRARIES} pthread)
+
+# WebSocket Filtering Demo Executable
+add_executable(test_websocket_filtering_demo scripts/test_websocket_filtering_demo.cpp 
+    src/websocket_connection.cpp
+    src/websocket_manager.cpp
+    src/logger.cpp 
+    src/config_manager.cpp
+)
+
+target_include_directories(test_websocket_filtering_demo PRIVATE include)
+target_link_libraries(test_websocket_filtering_demo ${Boost_LIBRARIES} pthread)
