Defined JobStatusUpdate, JobMonitoringData, and JobMetrics structs - Created comprehensive data structures for real-time job monitoring with all necessary fields for tracking job progress, metrics, and status changes.
Implemented JSON serialization/deserialization for WebSocket messages - Added toJson() and fromJson() methods for all data structures, enabling seamless WebSocket communication.

Created message type enumeration and routing logic - Implemented MessageType enum and WebSocketMessage wrapper with factory methods for different message types, plus ConnectionFilters for client-side filtering.

Wrote comprehensive unit tests - Created test_job_monitoring_models.cpp with 80+ test cases covering serialization, deserialization, validation, and utility functions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ set(SOURCES
     src/input_validator.cpp
     src/exceptions.cpp
     src/exception_handler.cpp
+    src/job_monitoring_models.cpp
 )
 
 # Create executable
@@ -111,3 +112,13 @@ add_executable(test_websocket_filtering_demo scripts/test_websocket_filtering_de
 
 target_include_directories(test_websocket_filtering_demo PRIVATE include)
 target_link_libraries(test_websocket_filtering_demo ${Boost_LIBRARIES} pthread)
+
+# Job Monitoring Models Test Executable
+add_executable(test_job_monitoring_models scripts/test_job_monitoring_models.cpp 
+    src/job_monitoring_models.cpp
+    src/logger.cpp 
+    src/config_manager.cpp
+)
+
+target_include_directories(test_job_monitoring_models PRIVATE include)
+target_link_libraries(test_job_monitoring_models ${Boost_LIBRARIES} pthread)
