✅ Add JobMonitorService integration points to ETLJobManager - I added the setJobMonitorService method and private member variable ✅ Implement job status change event publishing - I implemented publishJobStatusUpdate and updateJobStatus methods that notify the monitor service ✅ Add progress tracking and step reporting during job execution - I implemented publishJobProgress, updateJobProgress, and executeJobWithMonitoring methods with detailed progress tracking for all job types ✅ Create unit tests for event publishing and progress tracking - I created comprehensive unit tests that verify all the monitoring functionality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,3 +122,17 @@ add_executable(test_job_monitoring_models scripts/test_job_monitoring_models.cpp
 
 target_include_directories(test_job_monitoring_models PRIVATE include)
 target_link_libraries(test_job_monitoring_models ${Boost_LIBRARIES} pthread)
+
+# ETL Job Manager Monitoring Test Executable
+add_executable(test_etl_job_manager_monitoring scripts/test_etl_job_manager_monitoring.cpp 
+    src/etl_job_manager.cpp
+    src/database_manager.cpp
+    src/data_transformer.cpp
+    src/logger.cpp 
+    src/config_manager.cpp
+    src/exceptions.cpp
+    src/exception_handler.cpp
+)
+
+target_include_directories(test_etl_job_manager_monitoring PRIVATE include)
+target_link_libraries(test_etl_job_manager_monitoring ${Boost_LIBRARIES} pthread)
