🐛 fix(CMakeLists.txt): Silence Boost policy warning (CMP0167), by opting into NEW behavior for CMake policies that are not explicitly set in the project file or have a value of OFF, such as POLICY_CXX20 and SET cmake_policy(SET ...) ✨ feat: Add support to use Boost 2.x features (e.g., NEW_INTRINSICS), by opting into this behavior for CMake policies that are not explicitly set in the project file or have a value of OFF, such as POLICY_CXX17 and SET cmake_policy(SET ...)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 3.16)
 project(ETLPlusBackend)
 
+# Silence Boost policy warning (CMP0167) by opting into NEW behavior
+if(POLICY CMP0167)
+    cmake_policy(SET CMP0167 NEW)
+endif()
+
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
