feat(CMakeLists.txt): Add real-time monitoring integration tests and custom targets for CI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -216,20 +216,42 @@ create_test_executable(test_config_simple scripts/test_config_simple.cpp)
 # TEMPORARY: Disabled until test is updated for new API
 # create_test_executable(test_notification_service_error_handling scripts/test_notification_service_error_handling.cpp)
 
-# TEMPORARY: Disabled test_real_time_monitoring_workflow until APIs are fixed
-# Add test executable for real-time monitoring workflow
-# add_executable(test_real_time_monitoring_workflow scripts/test_real_time_monitoring_workflow.cpp)
-# target_link_libraries(test_real_time_monitoring_workflow PRIVATE
-#     etl_common
-#     GTest::GTest
-#     GTest::Main
-#     Boost::system
-#     Boost::thread
-#     ${JSONCPP_LIBRARIES}
-#     Threads::Threads
-# )
-# target_include_directories(test_real_time_monitoring_workflow PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include ${JSONCPP_INCLUDE_DIR})
-# add_test(NAME RealTimeMonitoringWorkflowTest COMMAND test_real_time_monitoring_workflow)
+# Real-time monitoring integration test (working version)
+create_test_executable(test_real_time_monitoring_integration scripts/test_real_time_monitoring_integration.cpp)
+target_link_libraries(test_real_time_monitoring_integration GTest::gtest GTest::gtest_main)
+
+# TEMPORARY: Disabled test_real_time_monitoring_workflow until full APIs are implemented
+# This test requires complete WebSocket endpoints and HTTP server integration
+# create_test_executable(test_real_time_monitoring_workflow scripts/test_real_time_monitoring_workflow.cpp)
+
+# Add custom target to run integration tests
+add_custom_target(run_integration_tests
+    COMMAND ${CMAKE_COMMAND} -E echo "Running Real-time Monitoring Integration Tests..."
+    COMMAND test_real_time_monitoring_integration --gtest_filter="*BasicJobStatusTracking*:*WebSocketManagerConnectionHandling*:*NotificationServiceIntegration*:*ComponentLifecycleManagement*"
+    DEPENDS test_real_time_monitoring_integration
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    COMMENT "Running integration tests for real-time monitoring workflow"
+)
+
+# Add integration tests to the default build target
+add_custom_target(test_all
+    DEPENDS run_integration_tests
+    COMMENT "Build and run all integration tests"
+)
+
+# Add build-and-test target for continuous integration
+add_custom_target(build_and_test
+    COMMAND ninja
+    COMMAND ninja run_integration_tests
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    COMMENT "Build everything and run integration tests"
+)
+
+# Make test_all run when doing "ninja check"
+add_custom_target(check
+    DEPENDS test_all
+    COMMENT "Check code by building and running tests"
+)
 
 # Optional: Enable precompiled headers for common includes (C++20 feature)
 if(CMAKE_VERSION VERSION_GREATER_EQUAL "3.16")
