feat: Implement Task 1.1 - LogHandler interface and base implementations
✅ Task 1.1 Complete: Create LogHandler interface and base implementations

## What was implemented:
- Abstract LogHandler base class with polymorphic interface
- FileLogHandler supporting both TEXT and JSON formats
- ConsoleLogHandler with color support and stderr/stdout routing
- StreamingLogHandler foundation (WebSocket integration pending)
- Comprehensive test suite with 13 test cases covering all functionality

## Key Features:
- Type-safe LogEntry structure with job ID and context support
- Level-based filtering for all handlers
- Proper RAII resource management
- JSON escaping for special characters
- File size tracking and proper shutdown handling
- Thread-safe operations with mutex protection

## Files added:
- include/log_handler.hpp - Handler interface and declarations
- src/log_handler.cpp - Handler implementations
- scripts/test_log_handler.cpp - Comprehensive test suite
- marcopolo/specs/ - Design and requirements documentation

## Files modified:
- CMakeLists.txt - Added log_handler.cpp to build and test_log_handler test

## Test Results:
✅ All 13 tests passing:
- LogEntry construction and validation
- FileLogHandler text and JSON formatting
- Level filtering and context handling
- ConsoleLogHandler basic functionality
- JSON escaping and file size tracking
- Handler shutdown and resource cleanup

This completes the foundation for the logging system refactoring as per
the design specification. Next step: Task 1.2 - Extract LogFileManager.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,6 +110,7 @@ endif()
 # Create a shared library for common sources to avoid recompilation
 set(COMMON_SOURCES
     src/logger.cpp
+    src/log_handler.cpp
     src/config_manager.cpp
     src/database_manager.cpp
     src/websocket_connection.cpp
@@ -214,6 +215,7 @@ create_test_executable(test_log_streaming_demo scripts/test_log_streaming_demo.c
 create_test_executable(test_enhanced_rest_endpoints_simple scripts/test_enhanced_rest_endpoints_simple.cpp)
 create_test_executable(test_config_management_demo scripts/test_config_management_demo.cpp)
 create_test_executable(test_config_simple scripts/test_config_simple.cpp)
+create_test_executable(test_log_handler scripts/test_log_handler.cpp)
 # TEMPORARY: Disabled until test is updated for new API
 # create_test_executable(test_notification_service_error_handling scripts/test_notification_service_error_handling.cpp)
 
