feat(error_codes): Consolidate and categorize error codes, reducing from 40+ to 28 codes for better maintainability
feat(etl_exceptions): Update ETLException and derived classes to utilize consolidated error codes and improve logging

feat(tests): Add test suite for error code consolidation and new exception handling system

refactor(CMakeLists): Include new source files for error codes and ETL exceptions in the build process

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,8 @@ set(COMMON_SOURCES
     src/input_validator.cpp
     src/exceptions.cpp
     src/exception_handler.cpp
+    src/error_codes.cpp
+    src/etl_exceptions.cpp
     src/job_monitoring_models.cpp
     src/job_monitor_service.cpp
     src/notification_service.cpp
@@ -220,6 +222,7 @@ create_test_executable(test_log_handler scripts/test_log_handler.cpp)
 create_test_executable(test_log_file_manager scripts/test_log_file_manager.cpp)
 target_link_libraries(test_log_file_manager GTest::gtest GTest::gtest_main)
 create_test_executable(test_component_logger_template scripts/test_component_logger_template.cpp)
+create_test_executable(test_error_code_consolidation scripts/test_error_code_consolidation.cpp)
 
 # Demo executable for LogFileManager
 add_executable(demo_log_file_manager scripts/demo_log_file_manager.cpp)
